# quickscope

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
quickscope/: __init__.py  cli.py  pipeline.py  plots.py  results.py
quickscope/adapters/: __init__.py  llm_interface.py  llm_runtime_config.py  model_registry.py
quickscope/dataflow/: __init__.py  loader.py  logging_config.py  path_registry.py  response_cache.py  transform_registry.py  utility_registry.py
quickscope/optimization/: __init__.py  coup_optimization.py  evaluator.py  lhs_optimization.py  utils.py
quickscope/optimization/coup/: coup.py  model.py  utils.py
quickscope/services/: llm_service.py
quickscope/simulation/: README.md  runner.py
quickscope/simulation/abstract/: __init__.py  component_registry.py  engine.py  generator.py  response_handler.py  schemas.py
quickscope/simulation/default/: dataset_loader.py  engine.py  generator.py  metrics.py  response_handler.py  schemas.py
quickscope/simulation/dyval/: __init__.py  dyval_generator.py  metrics.py
quickscope/simulation/reasoning_gym/: __init__.py  generator.py  metrics.py
quickscope/simulation/steer_me/: metrics.py
resources/: __init__.py  model_configs.yaml  paths.yaml
resources/search_spaces/: utility.py  utility_transform.py
resources/search_spaces/dyval/: space.py  space_unconstrained.yaml  utility.py  utility_transform.py
resources/search_spaces/offline/: utility.py  utility_transform.py
site/: data.js  index.html
site/assets/: results-data.js
(+13 files in other folders)
